--- a/lesson26/task/index.css
+++ b/lesson26/task/index.css
@@ -7,9 +7,9 @@ body {
     font-family: "Roboto", sans-serif;
 }
 
-header {
-    height: 60px;
+.header {
     display: flex;
+    height: 60px;
     padding: 20px 40px;
     align-items: center;
 }
@@ -21,7 +21,7 @@ button {
     cursor: pointer;
 }
 
-.create-event-button {
+.create-event-btn {
     padding: 0 10px;
     margin-right: 20px;
 }
@@ -40,16 +40,16 @@ button {
 .calendar__header {
     display: flex;
     width: 100%;
-    margin-top: 20px;
     padding-left: 60px;
+    margin-top: 20px;
 }
 
 .calendar__day-label {
-    height: 100%;
-    flex-direction: column;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     flex: 1;
+    height: 100%;
+    align-items: center;
 }
 
 .calendar__day-name {
@@ -60,4 +60,47 @@ button {
 .calendar__day-number {
     font-size: 30px;
     margin-top: 10px;
+}
+
+.calendar {
+    display: flex;
+    flex-direction: column;
+    height: calc(100vh - 60px);
+}
+
+.calendar__body {
+    display: flex;
+    overflow: auto;
+}
+
+.sidebar {
+    height: 100%;
+    width: 60px;
+}
+
+.sidebar__time-slot {
+    height: 60px;
+    text-align: right;
+}
+
+.sidebar__time {
+    position: relative;
+    font-size: 10px;
+    top: -15px;
+    margin-right: 5px;
+}
+
+.calendar__week {
+    display: flex;
+    flex: 1;
+}
+
+.calendar__day {
+    flex: 1;
+    border-left: 1px solid #eee;
+}
+
+.calendar__hour {
+    height: 60px;
+    border-bottom: 1px solid #eee;
 }
